proj2/modules/security/sg/main.tf
resource "aws_security_group" "sg" {
  name        = "sg"
  description = "Allow some port inbound traffic"
  vpc_id      = var.vpc_id
}

resource "aws_security_group_rule" "ingress" {
  count             = length(var.inbound_ports)
  #count             = 1
   type              = "ingress"
  from_port         = var.inbound_ports[count.index]
  to_port           = var.inbound_ports[count.index]
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.sg.id
}
resource "aws_security_group_rule" "egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  ipv6_cidr_blocks  = ["::/0"]
  security_group_id = aws_security_group.sg.id
}

resource "aws_security_group" "emr_master" {
  name                   = "EMR-master"
  description            = "Security group for EMR master."
  vpc_id                 = var.vpc_id
  revoke_rules_on_delete = true

/*   ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["${var.ingress_cidr_blocks}"]
  } */

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["${var.ingress_cidr_blocks}"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["${var.ingress_cidr_blocks}"]
  }


   ingress {
    from_port   = 4040
     to_port     = 4040
     protocol    = "tcp"
     cidr_blocks = ["${var.ingress_cidr_blocks}"]
   }

   ingress {
     from_port   = 8888
     to_port     = 8888
     protocol    = "tcp"
     cidr_blocks = ["${var.ingress_cidr_blocks}"]
   }

   ingress {
     from_port   = 20888
     to_port     = 20888
     protocol    = "tcp"
     cidr_blocks = ["${var.ingress_cidr_blocks}"]
   }
      ingress {
     from_port   = 22
     to_port     = 22
     protocol    = "tcp"
     cidr_blocks = ["${var.ingress_cidr_blocks}"]
   }

  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "EMR_master"
  }
}

resource "aws_security_group" "emr_slave" {
  name                   = "EMR-slave"
  description            = "Security group for EMR slave."
  vpc_id                 = var.vpc_id
  revoke_rules_on_delete = true

  ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["${var.ingress_cidr_blocks}"]
    #    cidr_blocks = ["10.0.0.0/16"]
  }


  egress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "EMR_slave"
  }
}
